# elixir-qml

./: CMakeLists.txt  minimal.qml  mix.exs
lib/: application.ex  applicationserver.ex  channel.ex  channelwatcher.ex  channelwatchermanager.ex  example.ex  guiserver.ex  modelchannel.ex  modelchannelwatcher.ex  qml.ex  qmlchannel.ex  qmlchannelmanager.ex  qmlchanneloperations.ex  qmlchannelserver.ex
lib/private/: private.ex
src/: application.cpp  application.h  elixirchannel.cpp  elixirchannel.h  nifpp.h  qml.cpp  qml.h  simpledatamodel.cpp  simpledatamodel.h
